# envcon

./: .flake8  .gitignore  LICENSE  README.md  poetry_scripts.py  pyproject.toml  scripts.sh
envcon/: __init__.py  configuration.py  configuration_injector.py  extended_environ.py  frozen.py  metaclasses.py
envcon/utils/: converter.py  functional.py  inspections.py  type_utils.py
tests/: helpers.py  shared.py  test_configuration.py  test_environment_configuration.py  test_frozen.py  test_utils.py
tests/utils/: __init__.py
