[tool.poetry]
name = "envcon"
version = "1.8.0"
description = "envcon: environment variables parsing using type-hints"
license = "MIT"
authors = ["Neria <me@neria.dev>"]
maintainers = ["Neria <me@neria.dev>"]
readme = "README.md"
homepage = "https://github.com/neriat/envcon"
repository = "https://github.com/neriat/envcon"
keywords = ["environment", "variables", "configuration", "12factor", "twelve-factor"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]


[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.18.0, <2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.5b2"
flake8 = "^3.9.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
