[tool.poetry]
name = "envcon"
version = "1.8.3"
description = "envcon: environment variables parsing using type-hints"
license = "MIT"
authors = ["Neria <me@neria.dev>"]
maintainers = ["Neria <me@neria.dev>"]
readme = "README.md"
homepage = "https://github.com/neriat/envcon"
repository = "https://github.com/neriat/envcon"
keywords = ["environment", "variables", "configuration", "12factor", "twelve-factor"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]


[tool.poetry.dependencies]
python = "^3.8.1"
python-dotenv = ">=0.18.0, <2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
flake8 = "^6.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
